# vaultcode-dist

./: README.md  VERSION  install.sh
client-lib-python/: README.md  pyproject.toml
client-lib-python/vaultcode/: __init__.py  banner.py  cache.py  config.py  crypto.py  key_server_client.py  runtime.py  sentinel.py
lib/: bootstrap.php
lib/src/: Banner.php  Cache.php  Config.php  Crypto.php  KeyServerClient.php  KeyServerInterface.php  Runtime.php  Sentinel.php
watcher/vaultcode_watcher/: __init__.py  cli.py  locate.py  report.py  sender.py  updater.py  verify.py
