[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultcode-client"
version = "1.0.0"
description = "VaultCode — client runtime per script Python (decifratura a runtime delle porzioni protette)"
requires-python = ">=3.11"
dependencies = ["cryptography>=41"]

[tool.setuptools]
packages = ["vaultcode"]
